cmake_minimum_required(VERSION 3.15)

project(SourceSDK)

if(WIN32 AND MSVC AND (CMAKE_SIZEOF_VOID_P EQUAL 4))
else()
    error("Unsupported platform")
endif()

add_library(server SHARED)

set_property(TARGET server PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

target_compile_definitions(server PRIVATE
    RAD_TELEMETRY_DISABLED
    GAME_DLL
    VECTOR
    VERSION_SAFE_STEAM_API_INTERFACES
    PROTECTED_THINGS_ENABLE
    sprintf=use_Q_snprintf_instead_of_sprintf
    strncpy=use_Q_strncpy_instead
    _snprintf=use_Q_snprintf_instead
    HL2MP
    HL2_DLL
#    HL2_EPISODIC
    USE_NAV_MESH
    _DLL_EXT=.dll
)

target_link_options(server PRIVATE 
    /NODEFAULTLIB
)

target_include_directories(server PRIVATE
    mp/src/public
    mp/src/public/tier0
    mp/src/public/tier1
    mp/src/public/soundsystem
    mp/src/common
    mp/src/game/server
    mp/src/game/server/episodic
    mp/src/game/server/hl2
    mp/src/game/server/hl2mp
    mp/src/game/shared
    mp/src/game/shared/hl2
    mp/src/game/shared/hl2mp
    mp/src/game/client
)

target_sources(server PRIVATE
    mp/src/game/server/ai_activity.cpp
    mp/src/game/server/ai_condition.cpp
    mp/src/game/server/AI_Criteria.cpp
    mp/src/game/server/ai_initutils.cpp
    mp/src/game/server/ai_baseactor.cpp
    mp/src/game/server/ai_basehumanoid.cpp
    mp/src/game/server/ai_basenpc.cpp
    mp/src/game/server/ai_basenpc_movement.cpp
    mp/src/game/server/ai_basenpc_schedule.cpp
    mp/src/game/server/ai_basenpc_squad.cpp
    mp/src/game/server/ai_behavior.cpp
    mp/src/game/server/ai_behavior_assault.cpp
    mp/src/game/server/ai_behavior_follow.cpp
    mp/src/game/server/ai_behavior_standoff.cpp
    mp/src/game/server/ai_default.cpp
    mp/src/game/server/ai_dynamiclink.cpp
    mp/src/game/server/ai_event.cpp
    mp/src/game/server/ai_goalentity.cpp
    mp/src/game/server/ai_hint.cpp
    mp/src/game/server/ai_hull.cpp
    mp/src/game/server/AI_Interest_Target.cpp
    mp/src/game/server/ai_link.cpp
    mp/src/game/server/ai_localnavigator.cpp
    mp/src/game/server/ai_memory.cpp
    mp/src/game/server/ai_motor.cpp
    mp/src/game/server/ai_moveprobe.cpp
    mp/src/game/server/ai_moveshoot.cpp
    mp/src/game/server/ai_movesolver.cpp
    mp/src/game/server/ai_namespaces.cpp
    mp/src/game/server/ai_navigator.cpp
    mp/src/game/server/ai_network.cpp
    mp/src/game/server/ai_networkmanager.cpp
    mp/src/game/server/ai_node.cpp
    mp/src/game/server/ai_pathfinder.cpp
    mp/src/game/server/ai_planesolver.cpp
    mp/src/game/server/ai_playerally.cpp
    mp/src/game/server/AI_ResponseSystem.cpp
    mp/src/game/server/ai_route.cpp
    mp/src/game/server/ai_saverestore.cpp
    mp/src/game/server/ai_schedule.cpp
    mp/src/game/server/ai_senses.cpp
    mp/src/game/server/ai_speech.cpp
    mp/src/game/server/ai_squad.cpp
    mp/src/game/server/ai_squadslot.cpp
    mp/src/game/server/ai_tacticalservices.cpp
    mp/src/game/server/ai_task.cpp
    mp/src/game/server/ai_utils.cpp
    mp/src/game/server/ai_waypoint.cpp
    mp/src/game/server/baseanimating.cpp
    mp/src/game/server/BaseAnimatingOverlay.cpp
    mp/src/game/server/basecombatcharacter.cpp
    mp/src/game/server/basecombatweapon.cpp
    mp/src/game/server/baseentity.cpp
    mp/src/game/server/baseflex.cpp
    mp/src/game/server/basemultiplayerplayer.cpp
    mp/src/game/server/basetempentity.cpp
    mp/src/game/server/baseviewmodel.cpp
    mp/src/game/server/cbase.cpp
    mp/src/game/server/client.cpp
    mp/src/game/server/CommentarySystem.cpp
    mp/src/game/server/cplane.cpp
    mp/src/game/server/CRagdollMagnet.cpp
    mp/src/game/server/damagemodifier.cpp
    mp/src/game/server/doors.cpp
    mp/src/game/server/effects.cpp
    mp/src/game/server/EffectsServer.cpp
    mp/src/game/server/entityblocker.cpp
    mp/src/game/server/entitylist.cpp
    mp/src/game/server/EntityFlame.cpp
    mp/src/game/server/EntityDissolve.cpp
    mp/src/game/server/EntityParticleTrail.cpp
    mp/src/game/server/env_player_surface_trigger.cpp
    mp/src/game/server/env_zoom.cpp
    mp/src/game/server/envmicrophone.cpp
    mp/src/game/server/EnvSpark.cpp
    mp/src/game/server/EventLog.cpp
    mp/src/game/server/event_tempentity_tester.cpp
    mp/src/game/server/explode.cpp
    mp/src/game/server/filters.cpp
    mp/src/game/server/fire.cpp
    mp/src/game/server/fire_smoke.cpp
    mp/src/game/server/fogcontroller.cpp
    mp/src/game/server/func_areaportal.cpp
    mp/src/game/server/func_areaportalbase.cpp
    mp/src/game/server/func_areaportalwindow.cpp
    mp/src/game/server/func_break.cpp
    mp/src/game/server/func_breakablesurf.cpp
    mp/src/game/server/func_dust.cpp
    mp/src/game/server/func_ladder_endpoint.cpp
    mp/src/game/server/func_lod.cpp
    mp/src/game/server/func_movelinear.cpp
    mp/src/game/server/func_occluder.cpp
    mp/src/game/server/func_reflective_glass.cpp
    mp/src/game/server/func_smokevolume.cpp
    mp/src/game/server/game.cpp
    mp/src/game/server/gameinterface.cpp
    mp/src/game/server/GameStats_BasicStatsFunctions.cpp
    mp/src/game/server/gametrace_dll.cpp
    mp/src/game/server/gameweaponmanager.cpp
    mp/src/game/server/globals.cpp
    mp/src/game/server/globalstate.cpp
    mp/src/game/server/gib.cpp
    mp/src/game/server/h_ai.cpp
    mp/src/game/server/hierarchy.cpp
    mp/src/game/server/hl2/ai_behavior_actbusy.cpp
    mp/src/game/server/hl2/combine_mine.cpp
    mp/src/game/server/hl2/grenade_frag.cpp
    mp/src/game/server/hl2/grenade_ar2.cpp
    mp/src/game/server/hl2/grenade_satchel.cpp
    mp/src/game/server/hl2/npc_barnacle.cpp
    mp/src/game/server/hl2/hl_playermove.cpp
    mp/src/game/server/hl2/hl2_eventlog.cpp
    mp/src/game/server/hl2/hl2_player.cpp
    mp/src/game/server/hl2/hl2_playerlocaldata.cpp
    mp/src/game/server/hl2/npc_playercompanion.cpp
    mp/src/game/server/hl2/prop_combine_ball.cpp
    mp/src/game/server/hl2/script_intro.cpp
    mp/src/game/server/hl2/te_gaussexplosion.cpp
    mp/src/game/server/hl2mp/hl2mp_client.cpp
    mp/src/game/server/hl2mp/hl2mp_cvars.cpp
    mp/src/game/server/hl2mp/hl2mp_gameinterface.cpp
    mp/src/game/server/hl2mp/hl2mp_player.cpp
    mp/src/game/server/hl2mp/te_hl2mp_shotgun_shot.cpp
    mp/src/game/server/hltvdirector.cpp
    mp/src/game/server/info_camera_link.cpp
    mp/src/game/server/info_overlay_accessor.cpp
    mp/src/game/server/init_factory.cpp
    mp/src/game/server/item_world.cpp
    mp/src/game/server/mapentities.cpp
    mp/src/game/server/message_entity.cpp
    mp/src/game/server/modelentities.cpp
    mp/src/game/server/movehelper_server.cpp
    mp/src/game/server/movement.cpp
    mp/src/game/server/nav_area.cpp
    mp/src/game/server/nav_colors.cpp
    mp/src/game/server/nav_edit.cpp
    mp/src/game/server/nav_entities.cpp
    mp/src/game/server/nav_file.cpp
    mp/src/game/server/nav_generate.cpp
    mp/src/game/server/nav_ladder.cpp
    mp/src/game/server/nav_merge.cpp
    mp/src/game/server/nav_mesh.cpp
    mp/src/game/server/nav_mesh_factory.cpp
    mp/src/game/server/nav_node.cpp
    mp/src/game/server/ndebugoverlay.cpp
    mp/src/game/server/pathtrack.cpp
    mp/src/game/server/physics.cpp
    mp/src/game/server/physics_bone_follower.cpp
    mp/src/game/server/physics_fx.cpp
    mp/src/game/server/physics_impact_damage.cpp
    mp/src/game/server/physics_main.cpp
    mp/src/game/server/physics_npc_solver.cpp
    mp/src/game/server/physics_prop_ragdoll.cpp
    mp/src/game/server/physconstraint.cpp
    mp/src/game/server/physobj.cpp
    mp/src/game/server/plasma.cpp
    mp/src/game/server/player.cpp
    mp/src/game/server/player_command.cpp
    mp/src/game/server/player_lagcompensation.cpp
    mp/src/game/server/playerlocaldata.cpp
    mp/src/game/server/player_pickup.cpp
    mp/src/game/server/player_resource.cpp
    mp/src/game/server/point_camera.cpp
    mp/src/game/server/point_template.cpp
    mp/src/game/server/props.cpp
    mp/src/game/server/RagdollBoogie.cpp
    mp/src/game/server/ragdoll_manager.cpp
    mp/src/game/server/recipientfilter.cpp
    mp/src/game/server/saverestore_gamedll.cpp
    mp/src/game/server/sceneentity.cpp
    mp/src/game/server/scripted.cpp
    mp/src/game/server/sendproxy.cpp
    mp/src/game/server/serverbenchmark_base.cpp
    mp/src/game/server/ServerNetworkProperty.cpp
    mp/src/game/server/SkyCamera.cpp
    mp/src/game/server/smoke_trail.cpp
    mp/src/game/server/sound.cpp
    mp/src/game/server/soundent.cpp
    mp/src/game/server/subs.cpp
    mp/src/game/server/tactical_mission.cpp
    mp/src/game/server/te.cpp
    mp/src/game/server/te_armorricochet.cpp
    mp/src/game/server/te_basebeam.cpp
    mp/src/game/server/te_beamentpoint.cpp
    mp/src/game/server/te_beaments.cpp
    mp/src/game/server/te_beamfollow.cpp
    mp/src/game/server/te_beamlaser.cpp
    mp/src/game/server/te_beampoints.cpp
    mp/src/game/server/te_beamring.cpp
    mp/src/game/server/te_beamringpoint.cpp
    mp/src/game/server/te_beamspline.cpp
    mp/src/game/server/te_bloodstream.cpp
    mp/src/game/server/te_bloodsprite.cpp
    mp/src/game/server/te_breakmodel.cpp
    mp/src/game/server/te_bspdecal.cpp
    mp/src/game/server/te_bubbles.cpp
    mp/src/game/server/te_bubbletrail.cpp
    mp/src/game/server/te_clientprojectile.cpp
    mp/src/game/server/te_decal.cpp
    mp/src/game/server/te_dynamiclight.cpp
    mp/src/game/server/te_effect_dispatch.cpp
    mp/src/game/server/te_energysplash.cpp
    mp/src/game/server/te_explosion.cpp
    mp/src/game/server/te_fizz.cpp
    mp/src/game/server/te_footprintdecal.cpp
    mp/src/game/server/te_glassshatter.cpp
    mp/src/game/server/te_glowsprite.cpp
    mp/src/game/server/te_impact.cpp
    mp/src/game/server/te_killplayerattachments.cpp
    mp/src/game/server/te_largefunnel.cpp
    mp/src/game/server/te_muzzleflash.cpp
    mp/src/game/server/te_particlesystem.cpp
    mp/src/game/server/te_physicsprop.cpp
    mp/src/game/server/te_playerdecal.cpp
    mp/src/game/server/te_projecteddecal.cpp
    mp/src/game/server/te_showline.cpp
    mp/src/game/server/te_smoke.cpp
    mp/src/game/server/te_sparks.cpp
    mp/src/game/server/te_sprite.cpp
    mp/src/game/server/te_spritespray.cpp
    mp/src/game/server/te_worlddecal.cpp
    mp/src/game/server/team.cpp
    mp/src/game/server/team_control_point.cpp
    mp/src/game/server/team_control_point_master.cpp
    mp/src/game/server/team_control_point_round.cpp
    mp/src/game/server/team_objectiveresource.cpp
    mp/src/game/server/team_train_watcher.cpp
    mp/src/game/server/TemplateEntities.cpp
    mp/src/game/server/textstatsmgr.cpp
    mp/src/game/server/timedeventmgr.cpp
    mp/src/game/server/toolframework_server.cpp
    mp/src/game/server/trains.cpp
    mp/src/game/server/triggers.cpp
    mp/src/game/server/trigger_area_capture.cpp
    mp/src/game/server/util.cpp
    mp/src/game/server/variant_t.cpp
    mp/src/game/server/vehicle_baseserver.cpp
    mp/src/game/server/vote_controller.cpp
    mp/src/game/server/waterbullet.cpp
    mp/src/game/server/wcedit.cpp
    mp/src/game/server/world.cpp
    mp/src/game/shared/achievement_saverestore.cpp
    mp/src/game/shared/achievementmgr.cpp
    mp/src/game/shared/activitylist.cpp
    mp/src/game/shared/ammodef.cpp
    mp/src/game/shared/animation.cpp
    mp/src/game/shared/collisionproperty.cpp
    mp/src/game/shared/debugoverlay_shared.cpp
    mp/src/game/shared/entitylist_base.cpp
    mp/src/game/shared/eventlist.cpp
    mp/src/game/shared/baseachievement.cpp
    mp/src/game/shared/basecombatcharacter_shared.cpp
    mp/src/game/shared/basecombatweapon_shared.cpp
    mp/src/game/shared/baseentity_shared.cpp
    mp/src/game/shared/basegrenade_shared.cpp
    mp/src/game/shared/baseparticleentity.cpp
    mp/src/game/shared/base_playeranimstate.cpp
    mp/src/game/shared/baseplayer_shared.cpp
    mp/src/game/shared/baseprojectile.cpp
    mp/src/game/shared/baseviewmodel_shared.cpp
    mp/src/game/shared/beam_shared.cpp
    mp/src/game/shared/choreoactor.cpp
    mp/src/game/shared/choreochannel.cpp
    mp/src/game/shared/choreoevent.cpp
    mp/src/game/shared/choreoscene.cpp
    mp/src/game/shared/death_pose.cpp
    mp/src/game/shared/decals.cpp
    mp/src/game/shared/effect_dispatch_data.cpp
    mp/src/game/shared/EntityParticleTrail_Shared.cpp
    mp/src/game/shared/env_wind_shared.cpp
    mp/src/game/shared/func_ladder.cpp
    mp/src/game/shared/gamemovement.cpp
    mp/src/game/shared/gamerules.cpp
    mp/src/game/shared/gamerules_register.cpp
    mp/src/game/shared/GameStats.cpp
    mp/src/game/shared/gamestringpool.cpp
    mp/src/game/shared/gamevars_shared.cpp
    mp/src/game/shared/hintsystem.cpp
    mp/src/game/shared/hintmessage.cpp
    mp/src/game/shared/hl2/basehlcombatweapon_shared.cpp
    mp/src/game/shared/hl2/hl_gamemovement.cpp
    mp/src/game/shared/hl2/hl2_gamerules.cpp
    mp/src/game/shared/hl2/hl2_usermessages.cpp
    mp/src/game/shared/hl2mp/hl2mp_gamerules.cpp
    mp/src/game/shared/hl2mp/hl2mp_player_shared.cpp
    mp/src/game/shared/hl2mp/hl2mp_weapon_parse.cpp
    mp/src/game/shared/hl2mp/weapon_357.cpp
    mp/src/game/shared/hl2mp/weapon_ar2.cpp
    mp/src/game/shared/hl2mp/weapon_crossbow.cpp
    mp/src/game/shared/hl2mp/weapon_crowbar.cpp
    mp/src/game/shared/hl2mp/weapon_frag.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbase.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbase_machinegun.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp
    mp/src/game/shared/hl2mp/weapon_physcannon.cpp
    mp/src/game/shared/hl2mp/weapon_pistol.cpp
    mp/src/game/shared/hl2mp/weapon_rpg.cpp
    mp/src/game/shared/hl2mp/weapon_shotgun.cpp
    mp/src/game/shared/hl2mp/weapon_slam.cpp
    mp/src/game/shared/hl2mp/weapon_smg1.cpp
    mp/src/game/shared/hl2mp/weapon_stunstick.cpp
    mp/src/game/shared/igamesystem.cpp
    mp/src/game/shared/interval.cpp
    mp/src/game/shared/mapentities_shared.cpp
    mp/src/game/shared/ModelSoundsCache.cpp
    mp/src/game/shared/movevars_shared.cpp
    mp/src/game/shared/mp_shareddefs.cpp
    mp/src/game/shared/multiplay_gamerules.cpp
    mp/src/game/shared/obstacle_pushaway.cpp
    mp/src/game/shared/particle_parse.cpp
    mp/src/game/shared/particlesystemquery.cpp
    mp/src/game/shared/physics_saverestore.cpp
    mp/src/game/shared/physics_shared.cpp
    mp/src/game/shared/physics_main_shared.cpp
    mp/src/game/shared/precache_register.cpp
    mp/src/game/shared/predictableid.cpp
    mp/src/game/shared/predicted_viewmodel.cpp
    mp/src/game/shared/props_shared.cpp
    mp/src/game/shared/querycache.cpp
    mp/src/game/shared/ragdoll_shared.cpp
    mp/src/game/shared/saverestore.cpp
    mp/src/game/shared/sceneentity_shared.cpp
    mp/src/game/shared/script_intro_shared.cpp
    mp/src/game/shared/sequence_Transitioner.cpp
    mp/src/game/shared/simtimer.cpp
    mp/src/game/shared/singleplay_gamerules.cpp
    mp/src/game/shared/SoundEmitterSystem.cpp
    mp/src/game/shared/soundenvelope.cpp
    mp/src/game/shared/Sprite.cpp
    mp/src/game/shared/SpriteTrail.cpp
    mp/src/game/shared/takedamageinfo.cpp
    mp/src/game/shared/teamplay_gamerules.cpp
    mp/src/game/shared/teamplayroundbased_gamerules.cpp
    mp/src/game/shared/usercmd.cpp
    mp/src/game/shared/usermessages.cpp
    mp/src/game/shared/util_shared.cpp
    mp/src/game/shared/voice_gamemgr.cpp
    mp/src/game/shared/weapon_parse.cpp
    mp/src/game/shared/weapon_proficiency.cpp
    mp/src/public/bone_setup.cpp
    mp/src/public/collisionutils.cpp
    mp/src/public/dt_recv.cpp
    mp/src/public/dt_send.cpp
    mp/src/public/dt_utlvector_common.cpp
    mp/src/public/dt_utlvector_send.cpp
    mp/src/public/dt_utlvector_recv.cpp
    mp/src/public/editor_sendcommand.cpp
    mp/src/public/haptics/haptic_msgs.cpp
    mp/src/public/haptics/haptic_utils.cpp
    mp/src/public/interpolatortypes.cpp
    mp/src/public/keyframe/keyframe.cpp
    mp/src/public/registry.cpp
    mp/src/public/rope_physics.cpp
    mp/src/public/server_class.cpp
    mp/src/public/simple_physics.cpp
    mp/src/public/studio.cpp
    mp/src/public/stringregistry.cpp
    mp/src/public/strings.cpp
    mp/src/public/SoundParametersInternal.cpp
    mp/src/public/valve_alloc.cpp
    mp/src/public/valve_alloc_crt.cpp
    mp/src/tier1/bitbuf.cpp
    mp/src/tier1/byteswap.cpp
    mp/src/tier1/characterset.cpp
    mp/src/tier1/checksum_crc.cpp
    mp/src/tier1/checksum_md5.cpp
    mp/src/tier1/convar.cpp
    mp/src/tier1/datamanager.cpp
    mp/src/tier1/generichash.cpp
    mp/src/tier1/interface.cpp
    mp/src/tier1/KeyValues.cpp
    mp/src/tier1/mempool.cpp
    mp/src/tier1/memstack.cpp
    mp/src/tier1/strtools.cpp
    mp/src/tier1/strtools_unicode.cpp
    mp/src/tier1/stringpool.cpp
    mp/src/tier1/tier1.cpp
    mp/src/tier1/uniqueid.cpp
    mp/src/tier1/utlbinaryblock.cpp
    mp/src/tier1/utlbuffer.cpp
    mp/src/tier1/utlbufferutil.cpp
    mp/src/tier1/utlstring.cpp
    mp/src/tier1/utlsymbol.cpp
    mp/src/mathlib/3dnow.cpp
    mp/src/mathlib/color_conversion.cpp
    mp/src/mathlib/IceKey.cpp
    mp/src/mathlib/mathlib_base.cpp
    mp/src/mathlib/randsse.cpp
    mp/src/mathlib/sse.cpp
    mp/src/mathlib/sseconst.cpp
    mp/src/mathlib/vmatrix.cpp
)

target_link_libraries(server PRIVATE
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/dmxloader.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/particles.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/steam_api.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier0.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier2.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier3.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/vstdlib.lib
    Rpcrt4.lib # UidCreate
    legacy_stdio_definitions.lib # _sscanf
    legacy_stdio_wide_specifiers.lib
    libcmt.lib
    libcpmt.lib
    libvcruntime.lib
    libucrt.lib
)

add_library(client SHARED)

set_property(TARGET client PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

target_compile_definitions(client PRIVATE
    RAD_TELEMETRY_DISABLED
    NO_STRING_T
    CLIENT_DLL
    HL2MP
    HL2_CLIENT_DLL
    VECTOR
    VERSION_SAFE_STEAM_API_INTERFACES
    PROTECTED_THINGS_ENABLE
    sprintf=use_Q_snprintf_instead_of_sprintf
    strncpy=use_Q_strncpy_instead
    _snprintf=use_Q_snprintf_instead
    fopen=dont_use_fopen
    CURL_STATICLIB
    _DLL_EXT=.dll
)

target_include_directories(client PRIVATE
    mp/src/public
    mp/src/public/mathlib
    mp/src/public/tier0
    mp/src/public/tier1
    mp/src/public/soundsystem
    mp/src/common
    mp/src/game/shared
    mp/src/game/shared/hl2
    mp/src/game/shared/hl2mp
    mp/src/game/client
    mp/src/game/client/game_controls
    mp/src/game/client/hl2
    mp/src/game/client/hl2mp
    mp/src/game/client/hl2mp/ui
)

target_sources(client PRIVATE
    mp/src/game/client/basepresence.cpp
    mp/src/game/client/beamdraw.cpp
    mp/src/game/client/bone_merge_cache.cpp
    mp/src/game/client/c_ai_basenpc.cpp
    mp/src/game/client/c_baseanimating.cpp
    mp/src/game/client/c_baseanimatingoverlay.cpp
    mp/src/game/client/c_basecombatcharacter.cpp
    mp/src/game/client/c_basecombatweapon.cpp
    mp/src/game/client/c_basedoor.cpp
    mp/src/game/client/c_baseentity.cpp
    mp/src/game/client/c_baseflex.cpp
    mp/src/game/client/c_baseplayer.cpp
    mp/src/game/client/c_basetempentity.cpp
    mp/src/game/client/c_baseviewmodel.cpp
    mp/src/game/client/c_breakableprop.cpp
    mp/src/game/client/c_effects.cpp
    mp/src/game/client/c_entitydissolve.cpp
    mp/src/game/client/c_entityparticletrail.cpp
    mp/src/game/client/c_env_fog_controller.cpp
    mp/src/game/client/c_fire_smoke.cpp
    mp/src/game/client/c_func_areaportalwindow.cpp
    mp/src/game/client/c_func_breakablesurf.cpp
    mp/src/game/client/c_func_dust.cpp
    mp/src/game/client/c_func_lod.cpp
    mp/src/game/client/c_func_occluder.cpp
    mp/src/game/client/c_func_reflective_glass.cpp
    mp/src/game/client/c_func_smokevolume.cpp
    mp/src/game/client/c_func_tracktrain.cpp
    mp/src/game/client/c_impact_effects.cpp
    mp/src/game/client/c_info_overlay_accessor.cpp
    mp/src/game/client/c_particle_system.cpp
    mp/src/game/client/c_pixel_visibility.cpp
    mp/src/game/client/c_physbox.cpp
    mp/src/game/client/c_physmagnet.cpp
    mp/src/game/client/c_physicsprop.cpp
    mp/src/game/client/c_point_camera.cpp
    mp/src/game/client/c_point_commentary_node.cpp
    mp/src/game/client/c_playerresource.cpp
    mp/src/game/client/c_plasma.cpp
    mp/src/game/client/c_props.cpp
    mp/src/game/client/c_sceneentity.cpp
    mp/src/game/client/c_te.cpp
    mp/src/game/client/c_te_armorricochet.cpp
    mp/src/game/client/c_te_basebeam.cpp
    mp/src/game/client/c_te_beamentpoint.cpp
    mp/src/game/client/c_te_beaments.cpp
    mp/src/game/client/c_te_beamfollow.cpp
    mp/src/game/client/c_te_beamlaser.cpp
    mp/src/game/client/c_te_beampoints.cpp
    mp/src/game/client/c_te_beamring.cpp
    mp/src/game/client/c_te_beamringpoint.cpp
    mp/src/game/client/c_te_beamspline.cpp
    mp/src/game/client/c_te_bloodsprite.cpp
    mp/src/game/client/c_te_bloodstream.cpp
    mp/src/game/client/c_te_breakmodel.cpp
    mp/src/game/client/c_te_bubbles.cpp
    mp/src/game/client/c_te_bubbletrail.cpp
    mp/src/game/client/c_te_bspdecal.cpp
    mp/src/game/client/c_te_clientprojectile.cpp
    mp/src/game/client/c_te_decal.cpp
    mp/src/game/client/c_te_dynamiclight.cpp
    mp/src/game/client/c_te_effect_dispatch.cpp
    mp/src/game/client/c_te_energysplash.cpp
    mp/src/game/client/c_te_explosion.cpp
    mp/src/game/client/c_te_footprint.cpp
    mp/src/game/client/c_te_fizz.cpp
    mp/src/game/client/c_te_glassshatter.cpp
    mp/src/game/client/c_te_glowsprite.cpp
    mp/src/game/client/c_te_impact.cpp
    mp/src/game/client/c_te_killplayerattachments.cpp
    mp/src/game/client/c_te_largefunnel.cpp
    mp/src/game/client/c_te_legacytempents.cpp
    mp/src/game/client/c_te_muzzleflash.cpp
    mp/src/game/client/c_te_particlesystem.cpp
    mp/src/game/client/c_te_physicsprop.cpp
    mp/src/game/client/c_te_playerdecal.cpp
    mp/src/game/client/c_te_projecteddecal.cpp
    mp/src/game/client/c_te_showline.cpp
    mp/src/game/client/c_te_smoke.cpp
    mp/src/game/client/c_te_sparks.cpp
    mp/src/game/client/c_te_sprite.cpp
    mp/src/game/client/c_te_spritespray.cpp
    mp/src/game/client/c_te_worlddecal.cpp
    mp/src/game/client/c_team.cpp
    mp/src/game/client/c_team_objectiveresource.cpp
    mp/src/game/client/c_team_train_watcher.cpp
    mp/src/game/client/c_tracer.cpp
    mp/src/game/client/c_ragdoll_manager.cpp
    mp/src/game/client/c_recipientfilter.cpp
    mp/src/game/client/c_rope.cpp
    mp/src/game/client/c_rumble.cpp
    mp/src/game/client/c_sprite.cpp
    mp/src/game/client/c_soundscape.cpp
    mp/src/game/client/c_smoke_trail.cpp
    mp/src/game/client/c_stickybolt.cpp
    mp/src/game/client/c_user_message_register.cpp
    mp/src/game/client/c_vguiscreen.cpp
    mp/src/game/client/c_vote_controller.cpp
    mp/src/game/client/c_world.cpp
    mp/src/game/client/cl_mat_stub.cpp
    mp/src/game/client/cdll_bounded_cvars.cpp
    mp/src/game/client/cdll_client_int.cpp
    mp/src/game/client/cdll_util.cpp
    mp/src/game/client/classmap.cpp
    mp/src/game/client/clienteffectprecachesystem.cpp
    mp/src/game/client/cliententitylist.cpp
    mp/src/game/client/client_factorylist.cpp
    mp/src/game/client/client_thinklist.cpp
    mp/src/game/client/clientleafsystem.cpp
    mp/src/game/client/clientmode_shared.cpp
    mp/src/game/client/clientshadowmgr.cpp
    mp/src/game/client/clientsideeffects.cpp
    mp/src/game/client/clientsideeffects_test.cpp
    mp/src/game/client/clientsteamcontext.cpp
    mp/src/game/client/colorcorrectionmgr.cpp
    mp/src/game/client/commentary_modelviewer.cpp
    mp/src/game/client/detailobjectsystem.cpp
    mp/src/game/client/EffectsClient.cpp
    mp/src/game/client/entity_client_tools.cpp
    mp/src/game/client/flashlighteffect.cpp
    mp/src/game/client/fx.cpp
    mp/src/game/client/fx_blood.cpp
    mp/src/game/client/fx_discreetline.cpp
    mp/src/game/client/fx_explosion.cpp
    mp/src/game/client/fx_fleck.cpp
    mp/src/game/client/fx_impact.cpp
    mp/src/game/client/fx_interpvalue.cpp
    mp/src/game/client/fx_line.cpp
    mp/src/game/client/fx_quad.cpp
    mp/src/game/client/fx_water.cpp
    mp/src/game/client/fx_sparks.cpp
    mp/src/game/client/fx_staticline.cpp
    mp/src/game/client/fx_tracer.cpp
    mp/src/game/client/fx_trail.cpp
    mp/src/game/client/gametrace_client.cpp
    mp/src/game/client/game_controls/basemodelpanel.cpp
    mp/src/game/client/game_controls/baseviewport.cpp
    mp/src/game/client/game_controls/ClientScoreBoardDialog.cpp
    mp/src/game/client/game_controls/commandmenu.cpp
    mp/src/game/client/game_controls/NavProgress.cpp
    mp/src/game/client/game_controls/SpectatorGUI.cpp
    mp/src/game/client/game_controls/teammenu.cpp
    mp/src/game/client/game_controls/vguitextwindow.cpp
    mp/src/game/client/geiger.cpp
    mp/src/game/client/glow_overlay.cpp
    mp/src/game/client/history_resource.cpp
    mp/src/game/client/hl2/c_barnacle.cpp
    mp/src/game/client/hl2/c_basehlplayer.cpp
    mp/src/game/client/hl2/c_corpse.cpp
    mp/src/game/client/hl2/c_hl2_playerlocaldata.cpp
    mp/src/game/client/hl2/c_prop_combine_ball.cpp
    mp/src/game/client/hl2/c_script_intro.cpp
    mp/src/game/client/hl2/c_te_concussiveexplosion.cpp
    mp/src/game/client/hl2/c_waterbullet.cpp
    mp/src/game/client/hl2/c_weapon_crossbow.cpp
    mp/src/game/client/hl2/fx_hl2_impacts.cpp
    mp/src/game/client/hl2/fx_hl2_tracers.cpp
    mp/src/game/client/hl2/hl_in_main.cpp
    mp/src/game/client/hl2/hl_prediction.cpp
    mp/src/game/client/hl2/hl2_clientmode.cpp
    mp/src/game/client/hl2/hud_ammo.cpp
    mp/src/game/client/hl2/hud_battery.cpp
    mp/src/game/client/hl2/hud_blood.cpp
    mp/src/game/client/hl2/hud_credits.cpp
    mp/src/game/client/hl2/hud_damageindicator.cpp
    mp/src/game/client/hl2/hud_flashlight.cpp
    mp/src/game/client/hl2/hud_health.cpp
    mp/src/game/client/hl2/hud_poisondamageindicator.cpp
    mp/src/game/client/hl2/hud_quickinfo.cpp
    mp/src/game/client/hl2/hud_suitpower.cpp
    mp/src/game/client/hl2/hud_weaponselection.cpp
    mp/src/game/client/hl2/hud_zoom.cpp
    mp/src/game/client/hl2/vgui_rootpanel_hl2.cpp
    mp/src/game/client/hl2mp/c_hl2mp_player.cpp
    mp/src/game/client/hl2mp/c_te_hl2mp_shotgun_shot.cpp
    mp/src/game/client/hl2mp/clientmode_hl2mpnormal.cpp
    mp/src/game/client/hl2mp/hl2mp_hud_chat.cpp
    mp/src/game/client/hl2mp/ui/backgroundpanel.cpp
    mp/src/game/client/hl2mp/ui/hl2mpclientscoreboard.cpp
    mp/src/game/client/hl2mp/ui/hl2mptextwindow.cpp
    mp/src/game/client/hltvcamera.cpp
    mp/src/game/client/hud.cpp
    mp/src/game/client/hud_basechat.cpp
    mp/src/game/client/hud_closecaption.cpp
    mp/src/game/client/hud_crosshair.cpp
    mp/src/game/client/hud_element_helper.cpp
    mp/src/game/client/hud_lcd.cpp
    mp/src/game/client/hud_msg.cpp
    mp/src/game/client/hud_numericdisplay.cpp
    mp/src/game/client/hud_pdump.cpp
    mp/src/game/client/hud_redraw.cpp
    mp/src/game/client/hud_weapon.cpp
    mp/src/game/client/in_camera.cpp
    mp/src/game/client/in_joystick.cpp
    mp/src/game/client/in_main.cpp
    mp/src/game/client/in_mouse.cpp
    mp/src/game/client/initializer.cpp
    mp/src/game/client/interpolatedvar.cpp
    mp/src/game/client/menu.cpp
    mp/src/game/client/message.cpp
    mp/src/game/client/mp3player.cpp
    mp/src/game/client/movehelper_client.cpp
    mp/src/game/client/mumble.cpp
    mp/src/game/client/panelmetaclassmgr.cpp
    mp/src/game/client/particlemgr.cpp
    mp/src/game/client/particles_attractor.cpp
    mp/src/game/client/particles_ez.cpp
    mp/src/game/client/particles_localspace.cpp
    mp/src/game/client/particles_new.cpp
    mp/src/game/client/particles_simple.cpp
    mp/src/game/client/particle_simple3d.cpp
    mp/src/game/client/particle_collision.cpp
    mp/src/game/client/physics.cpp
    mp/src/game/client/physics_main_client.cpp
    mp/src/game/client/physpropclientside.cpp
    mp/src/game/client/playerandobjectenumerator.cpp
    mp/src/game/client/prediction.cpp
    mp/src/game/client/proxyentity.cpp
    mp/src/game/client/ragdoll.cpp
    mp/src/game/client/recvproxy.cpp
    mp/src/game/client/rendertexture.cpp
    mp/src/game/client/ScreenSpaceEffects.cpp
    mp/src/game/client/smoke_fog_overlay.cpp
    mp/src/game/client/spritemodel.cpp
    mp/src/game/client/studio_stats.cpp
    mp/src/game/client/text_message.cpp
    mp/src/game/client/toolframework_client.cpp
    mp/src/game/client/train.cpp
    mp/src/game/client/vgui_debugoverlaypanel.cpp
    mp/src/game/client/view.cpp
    mp/src/game/client/view_beams.cpp
    mp/src/game/client/view_effects.cpp
    mp/src/game/client/view_scene.cpp
    mp/src/game/client/viewdebug.cpp
    mp/src/game/client/viewpostprocess.cpp
    mp/src/game/client/viewrender.cpp
    mp/src/game/client/vgui_avatarimage.cpp
    mp/src/game/client/vgui_bitmapbutton.cpp
    mp/src/game/client/vgui_bitmapimage.cpp
    mp/src/game/client/vgui_bitmappanel.cpp
    mp/src/game/client/vgui_centerstringpanel.cpp
    mp/src/game/client/vgui_int.cpp
    mp/src/game/client/vgui_game_viewport.cpp
    mp/src/game/client/vgui_fpspanel.cpp
    mp/src/game/client/vgui_loadingdiscpanel.cpp
    mp/src/game/client/vgui_messagechars.cpp
    mp/src/game/client/vgui_netgraphpanel.cpp
    mp/src/game/client/client_virtualreality.cpp
    mp/src/game/client/warp_overlay.cpp
    mp/src/game/client/weapons_resource.cpp
    mp/src/game/client/weapon_selection.cpp
    mp/src/game/shared/achievementmgr.cpp
    mp/src/game/shared/activitylist.cpp
    mp/src/game/shared/ammodef.cpp
    mp/src/game/shared/animation.cpp
    mp/src/game/shared/baseachievement.cpp
    mp/src/game/shared/basecombatcharacter_shared.cpp
    mp/src/game/shared/basecombatweapon_shared.cpp
    mp/src/game/shared/baseentity_shared.cpp
    mp/src/game/shared/basegrenade_shared.cpp
    mp/src/game/shared/baseparticleentity.cpp
    mp/src/game/shared/baseplayer_shared.cpp
    mp/src/game/shared/base_playeranimstate.cpp
    mp/src/game/shared/baseprojectile.cpp
    mp/src/game/shared/baseviewmodel_shared.cpp
    mp/src/game/shared/beam_shared.cpp
    mp/src/game/shared/cam_thirdperson.cpp
    mp/src/game/shared/choreoactor.cpp
    mp/src/game/shared/choreochannel.cpp
    mp/src/game/shared/choreoevent.cpp
    mp/src/game/shared/choreoscene.cpp
    mp/src/game/shared/collisionproperty.cpp
    mp/src/game/shared/death_pose.cpp
    mp/src/game/shared/decals.cpp
    mp/src/game/shared/effect_dispatch_data.cpp
    mp/src/game/shared/entitylist_base.cpp
    mp/src/game/shared/EntityParticleTrail_Shared.cpp
    mp/src/game/shared/env_wind_shared.cpp
    mp/src/game/shared/env_detail_controller.cpp
    mp/src/game/shared/eventlist.cpp
    mp/src/game/shared/func_ladder.cpp
    mp/src/game/shared/gamemovement.cpp
    mp/src/game/shared/gamerules.cpp
    mp/src/game/shared/gamerules_register.cpp
    mp/src/game/shared/GameStats.cpp
    mp/src/game/shared/gamestringpool.cpp
    mp/src/game/shared/gamevars_shared.cpp
    mp/src/game/shared/igamesystem.cpp
    mp/src/game/shared/interval.cpp
    mp/src/game/shared/mapentities_shared.cpp
    mp/src/game/shared/movevars_shared.cpp
    mp/src/game/shared/multiplay_gamerules.cpp
    mp/src/game/shared/obstacle_pushaway.cpp
    mp/src/game/shared/particle_parse.cpp
    mp/src/game/shared/particle_property.cpp
    mp/src/game/shared/particlesystemquery.cpp
    mp/src/game/client/perfvisualbenchmark.cpp
    mp/src/game/shared/hl2/basehlcombatweapon_shared.cpp
    mp/src/game/shared/hl2/hl_gamemovement.cpp
    mp/src/game/shared/hl2/hl2_gamerules.cpp
    mp/src/game/shared/hl2/hl2_usermessages.cpp
    mp/src/game/shared/hl2mp/hl2mp_gamerules.cpp
    mp/src/game/shared/hl2mp/hl2mp_player_shared.cpp
    mp/src/game/shared/hl2mp/hl2mp_weapon_parse.cpp
    mp/src/game/shared/hl2mp/weapon_357.cpp
    mp/src/game/shared/hl2mp/weapon_ar2.cpp
    mp/src/game/shared/hl2mp/weapon_crossbow.cpp
    mp/src/game/shared/hl2mp/weapon_crowbar.cpp
    mp/src/game/shared/hl2mp/weapon_frag.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbase.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbase_machinegun.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp
    mp/src/game/shared/hl2mp/weapon_physcannon.cpp
    mp/src/game/shared/hl2mp/weapon_pistol.cpp
    mp/src/game/shared/hl2mp/weapon_rpg.cpp
    mp/src/game/shared/hl2mp/weapon_shotgun.cpp
    mp/src/game/shared/hl2mp/weapon_slam.cpp
    mp/src/game/shared/hl2mp/weapon_smg1.cpp
    mp/src/game/shared/hl2mp/weapon_stunstick.cpp
    mp/src/game/shared/physics_main_shared.cpp
    mp/src/game/shared/physics_saverestore.cpp
    mp/src/game/shared/physics_shared.cpp
    mp/src/game/shared/precache_register.cpp
    mp/src/game/shared/predictableid.cpp
    mp/src/game/shared/predictioncopy.cpp
    mp/src/game/shared/predicted_viewmodel.cpp
    mp/src/game/shared/props_shared.cpp
    mp/src/game/shared/ragdoll_shared.cpp
    mp/src/game/shared/rope_helpers.cpp
    mp/src/game/shared/saverestore.cpp
    mp/src/game/shared/sequence_Transitioner.cpp
    mp/src/game/shared/sceneentity_shared.cpp
    mp/src/game/shared/script_intro_shared.cpp
    mp/src/game/shared/singleplay_gamerules.cpp
    mp/src/game/shared/SoundEmitterSystem.cpp
    mp/src/game/shared/soundenvelope.cpp
    mp/src/game/shared/Sprite.cpp
    mp/src/game/shared/SpriteTrail.cpp
    mp/src/game/shared/studio_shared.cpp
    mp/src/game/shared/takedamageinfo.cpp
    mp/src/game/shared/teamplayroundbased_gamerules.cpp
    mp/src/game/shared/usercmd.cpp
    mp/src/game/shared/usermessages.cpp
    mp/src/game/shared/util_shared.cpp
    mp/src/game/shared/voice_banmgr.cpp
    mp/src/game/shared/voice_status.cpp
    mp/src/game/shared/weapon_parse.cpp
    mp/src/mathlib/3dnow.cpp
    mp/src/mathlib/color_conversion.cpp
    mp/src/mathlib/IceKey.cpp
    mp/src/mathlib/lightdesc.cpp
    mp/src/mathlib/mathlib_base.cpp
    mp/src/mathlib/powsse.cpp
    mp/src/mathlib/randsse.cpp
    mp/src/mathlib/sse.cpp
    mp/src/mathlib/sseconst.cpp
    mp/src/mathlib/ssenoise.cpp
    mp/src/mathlib/vmatrix.cpp
    mp/src/public/bone_setup.cpp
    mp/src/public/client_class.cpp
    mp/src/public/collisionutils.cpp
    mp/src/public/crtmemdebug.cpp
    mp/src/public/dt_recv.cpp
    mp/src/public/dt_utlvector_common.cpp
    mp/src/public/dt_utlvector_recv.cpp
    mp/src/public/haptics/haptic_msgs.cpp
    mp/src/public/haptics/haptic_utils.cpp
    mp/src/public/interpolatortypes.cpp
    mp/src/public/jigglebones.cpp
    mp/src/public/posedebugger.cpp
    mp/src/public/renamed_recvtable_compat.cpp
    mp/src/public/rope_physics.cpp
    mp/src/public/simple_physics.cpp
    mp/src/public/sentence.cpp
    mp/src/public/SoundParametersInternal.cpp
    mp/src/public/studio.cpp
    mp/src/public/stringregistry.cpp
    mp/src/public/strings.cpp
    mp/src/public/tools/bonelist.cpp
    mp/src/public/valve_alloc.cpp
    mp/src/public/valve_alloc_crt.cpp
    mp/src/public/vgui_controls/vgui_controls.cpp
    mp/src/tier1/bitbuf.cpp
    mp/src/tier1/byteswap.cpp
    mp/src/tier1/characterset.cpp
    mp/src/tier1/checksum_crc.cpp
    mp/src/tier1/checksum_md5.cpp
    mp/src/tier1/convar.cpp
    mp/src/tier1/datamanager.cpp
    mp/src/tier1/generichash.cpp
    mp/src/tier1/ilocalize.cpp
    mp/src/tier1/interface.cpp
    mp/src/tier1/KeyValues.cpp
    mp/src/tier1/mempool.cpp
    mp/src/tier1/memstack.cpp
    mp/src/tier1/rangecheckedvar.cpp
    mp/src/tier1/strtools.cpp
    mp/src/tier1/strtools_unicode.cpp
    mp/src/tier1/tier1.cpp
    mp/src/tier1/uniqueid.cpp
    mp/src/tier1/utlbinaryblock.cpp
    mp/src/tier1/utlbuffer.cpp
    mp/src/tier1/utlbufferutil.cpp
    mp/src/tier1/utlstring.cpp
    mp/src/tier1/utlsymbol.cpp
    mp/src/vgui2/vgui_controls/AnimationController.cpp
    mp/src/vgui2/vgui_controls/BitmapImagePanel.cpp
    mp/src/vgui2/vgui_controls/BuildFactoryHelper.cpp
    mp/src/vgui2/vgui_controls/BuildGroup.cpp
    mp/src/vgui2/vgui_controls/BuildModeDialog.cpp
    mp/src/vgui2/vgui_controls/Button.cpp
    mp/src/vgui2/vgui_controls/CheckButton.cpp
    mp/src/vgui2/vgui_controls/ComboBox.cpp
    mp/src/vgui2/vgui_controls/controls.cpp
    mp/src/vgui2/vgui_controls/EditablePanel.cpp
    mp/src/vgui2/vgui_controls/FocusNavGroup.cpp
    mp/src/vgui2/vgui_controls/HTML.cpp
    mp/src/vgui2/vgui_controls/Image.cpp
    mp/src/vgui2/vgui_controls/ImageList.cpp
    mp/src/vgui2/vgui_controls/Frame.cpp
    mp/src/vgui2/vgui_controls/Label.cpp
    mp/src/vgui2/vgui_controls/Menu.cpp
    mp/src/vgui2/vgui_controls/MenuButton.cpp
    mp/src/vgui2/vgui_controls/MessageBox.cpp
    mp/src/vgui2/vgui_controls/Panel.cpp
    mp/src/vgui2/vgui_controls/PanelListPanel.cpp
    mp/src/vgui2/vgui_controls/RichText.cpp
    mp/src/vgui2/vgui_controls/SectionedListPanel.cpp
    mp/src/vgui2/vgui_controls/TextEntry.cpp
    mp/src/vgui2/vgui_controls/TextImage.cpp
    mp/src/vgui2/vgui_controls/ToggleButton.cpp
)


target_link_libraries(client PRIVATE
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/dmxloader.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/particles.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/matsys_controls.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/steam_api.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier0.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier2.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier3.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/vstdlib.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/vtf.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/vgui_controls.lib
    Rpcrt4.lib # UidCreate
    legacy_stdio_definitions.lib # _sscanf
    legacy_stdio_wide_specifiers.lib
    libcmt.lib
    libcpmt.lib
    libvcruntime.lib
    libucrt.lib
)

target_link_options(client PRIVATE
    /SAFESEH:NO             # for matsys_controls.lib
    /NODEFAULTLIB
    # hopefully to force selection of particles.lib (conflicts with ucrt)
    /INCLUDE:_hypot
    /FORCE:MULTIPLE
)